--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "@babel/preset-react": "^7.22.3",
     "axios": "^1.4.0",
     "babel-loader": "^9.1.2",
+    "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
+    "use-immer": "^0.9.0",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
