--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.11.2",
+    "react-tooltip": "^5.13.1",
     "use-immer": "^0.9.0",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
