--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-tooltip": "^5.13.1",
+    "react-transition-group": "^4.4.5",
     "use-immer": "^0.9.0",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
